# nnfabrik

./: .gitignore  00setup.html  01tutorial.html  02tutorial.html  03tutorial.html  Dockerfile  Dockerfile.lint  README.md  docker-compose.yml  genindex.html  getting_started.html  index.html  introduction.html  main.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  tutorials.html
.github/workflows/: black.yml  gh_pages.yml
Datasets/: CSRF_V1_Dataset.py
_sources/: 03tutorial.rst.txt  getting_started.rst.txt  index.rst.txt  introduction.rst.txt  tutorials.rst.txt
datasets/: CSRF_V1_Dataset.py  __init__.py  csrf_v1_dataset.py
docs/: 00setup.rst  01tutorial.rst  02tutorial.rst  03tutorial.rst  README.md  conf.py  index.rst  tutorial1.rst  tutorials.rst
models/: V1_models.py  __init__.py
nnfabrik/: __init__.py  builder.py  legacy.py  main.py  template.py
nnfabrik.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nnfabrik/datasets/: __init__.py  csrf_legacy_loaders.py  csrf_v1_dataset.py  dataset.py  mouse.py  movies.py  sysident_v1_dataset.py  toy_datasets.py
nnfabrik/examples/: nnfabrik.py
nnfabrik/measures/: measure_helpers.py  measures.py
nnslurm_demo/: .env_example  README.md  run.py  singularity.def  slurm_job.py
notebooks/: Demo_Express_loading_and_scoring_tables.ipynb  TransferredTrainedModel_example.ipynb  nnfabrik_example.ipynb  nnfabrik_monkey_demo.ipynb  toy_nnfabrik.ipynb
training/: __init__.py  trainers.py
utility/: __init__.py  dj_helpers.py  helper_functions.py  nn_helpers.py
(+50 files in other folders)
